Address PR comment and specify flex-grow to 1 to prevent overlap

--- a/apps/concierge_site/assets/css/_my-subscriptions.scss
+++ b/apps/concierge_site/assets/css/_my-subscriptions.scss
@@ -81,7 +81,7 @@
   font-weight: bold;
   text-align: left;
   margin-bottom: 0.2rem;
-  flex-basis: auto;
+  flex: 1 0 auto;
   align-items: center;
 
   i {
@@ -92,7 +92,7 @@
 .subscription-details {
   text-align: left;
   font-size: 0.85rem;
-  flex-basis: auto;
+  flex: 1 0 auto;
 
   p {
     margin-bottom: 0.4rem;
